--- a/html/carro.html
+++ b/html/carro.html
@@ -65,5 +65,7 @@
 
     </script>
     <script src="../js/carro.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </body>
 </html>
